git-svn-id: svn://localhost/Media%20Server@138 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,7 @@
+2009-03-06
+Make a template module that compiles and cache the smarty templates, then accessing a page can be done by accessing the template module
+Make a reports.php plugin for admin that shows different information about loaded files, and how to manipulate them
+
 2009-03-05
 Make a sync plugin in admin section for syncing between two databases and pulling out differences
 Make the audio module match amazon albums
