git-svn-id: svn://localhost/Media%20Server@140 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,7 @@
 2009-03-06
 Fixed zip template, crc() can work with a file pointer, still working on bt.php plugin which uses md5
 Improved searching capabilities in db_file
+Worked on db_file module and fixed some search functionality
 
 2009-03-04
 Worked on db_playlist module, mostly working just needs some tweaks
