--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,17 @@
 2009-03-23
 Work on discography.php plugin
+Preffered media type prediction based on browser/client, itunes gets mp4s, windows mediaplayer gets mpeg and wmv, if the parameter is left out, check the client info
+Make a new database and module that extends from audio that aligns albums with amazingIds
+	Also provide links to purchasing songs, and try to fill in missing information on output
+	Look up Yamo to see if more information can be found
+	Download album art, and store the picture in database, parse song titles
+Provide useful information in reports section about missing songs
+Do the same stuff for movies, and see if that will help with searching IMDb
+Make a discography module that parses out wikipedia discographys, store album information, and return links to Full Discography, and Partial Discography
+	this will list out each artist with full or missing albums
+	It handles artists, when an album count changes or doesn't exist it updates the database
+Write a parseFilename function that removes extra crap from filename and tokenizes it, return phoenetic pronounciations and search keywords
+	Return multiple tiers of tokens, a short which only contains large useful words, and full with contains all the tokens
 
 2009-03-20
 Put removing files functionality into watch_list.php module handle functions, where the message "Scanning" is printed
@@ -19,7 +31,6 @@ File uploading and personal folders
 Interface with mediatomb and support UPnP protocol
 ------------- Plugin TODO -------------
 Change some of the other plugins like file.php and encode.php to search when a required field is missing like $request[id]
-Work on playlist module, use hard links to help find files
 Work on reports.php plugin for admin
 	Use logs also to scan for non-ascii characters in path names in reports.php
 Make a sync plugin in admin section for syncing between two databases and pulling out differences
@@ -33,7 +44,8 @@ Figure out how to download files out of a zip file, maybe use an external progra
 FIX bt.php plugin to work with command line torrent seeder on windows
 Make convert.php plugin recognize video thumbnails and use vlc to extract them
 ------------- Module TODO -------------
-Make the audio module match amazon albums
+Work on playlist module, use hard links to help find files
+Make the db_audio module match amazon albums
 Make a code module that handles code and uses that pretty hilighing from the codepaster.com website
 Make a template module that compiles and cache the smarty templates, then accessing a page can be done by accessing the template module
 Work on db_movies, use cUrl to download movie information from imdb, use the volume decriptor for lookup, this shouldn't change even if they edited an image
