git-svn-id: svn://localhost/Media%20Server@155 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,11 @@
-2009-03-24
-Created a database GLOBAL because it is not at all state dependant, and there is no reason to pass it to a bunch of different functions
+2009-03-25
+New clause added to the top of plugins that require at least 1 file to be selected
+	They now search the request when all possible fields that would return a result are empty
+
+2009-03-24 (14,000+ lines of code)
+Created a GLOBAL['database'] because it is not at all state dependant, and there is no reason to pass it to a bunch of different functions
+Worked on db_amazon module
+Created tokenizing function to take strings and parse out useless stuff
 
 2009-03-23
 Made cleanup faster by only checking for removed/non-existent files when the directory changes in the db_watch_list module
@@ -17,7 +23,6 @@ Found out changing the Filepath and TEXT fields to BLOB didn't help the filepath
 Changed db_file::cleanup() to use LEFT and LOCATE instead of REGEXP
 Made masive progress on reports.php admin script
 Fixed unicode problem by changing the TEXT columns in the database to BLOB, now binary text is preserved
-
 
 2009-03-10
 Fixed some searching and sorting problems in the db_files module
