git-svn-id: svn://localhost/Media%20Server@159 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,7 @@
 2009-03-26
 Made all the modules add() functions handle the ID for modifying in the same order as the handle() function
+Fixed modules handling the removing of ids from database
+Fixed some vulnerablities with not using htmlspecialchars() from global variables in templates
 
 2009-03-25
 New clause added to the top of plugins that require at least 1 file to be selected
