status: working, new install in progress
git-svn-id: svn://localhost/Media%20Server@161 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -4,6 +4,13 @@ Added a struct() function to each module that returns the structure of the datab
 	Format is array('column_name' => 'type'), the type should be SQL compatible, and the php equivilent will try to be detected
 	You can only search columns listed by the module::columns() function, ::struct() is used internally
 	If a space is detected the type will be the first word and it will override NOT NULL being added to the create query
+Added an INTERNAL constant to some classes to define if they should only be used internally
+	this does not affect the functionality of any script, it is only used for template to filter out internal modules
+	Added INTERNAL = true to db_watch, db_watch_list, db_alias, db_ids
+All modules are now included and accessible, but only the appropriate db_ or fs_ modules are listed in $GLOBALS['modules']
+	This is so functionality can be extracted from the db_modules and used in the fs_modules or vice versa
+	But templates should still only use the modules that are not INTERNAL and are listed in $GLOBALS['modules']
+Fixed plugins that check for cat, now they make sure the module being accessed isn't an INTERNAL module
 
 2009-03-26
 Made all the modules add() functions handle the ID for modifying in the same order as the handle() function
