git-svn-id: svn://localhost/Media%20Server@172 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,7 @@
 2009-03-31
 Fixed db_amazon module to not access the database unnessicarily
+Nearly finished live template
+Fixed some problems in db_files and db_ids
 
 2009-03-30
 All modules return the ID of added or modified entry
