git-svn-id: svn://localhost/Media%20Server@208 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,6 @@
 2009-04-18
 Worked on live template, right click menu
+Cron doesn't run if it is already running, so only one instance is working at a time
 
 2009-04-16
 Worked on live template, got drag selecting working
