git-svn-id: svn://localhost/Media%20Server@211 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,4 @@
+Figure out why directories take so song to check for changes
 More compatibility testing with clients
 ------------- GENERAL TODO -------------
 Use PEAR::Error_Stack for error handling?
