git-svn-id: svn://localhost/Media%20Server@221 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,6 @@
+2009-07-02
+All relevant admin scripts now use templates the same way any other plugin does
+
 2009-07-01
 Worked on WMP template
 Commented users.php plugin
