git-svn-id: svn://localhost/Media%20Server@222 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,6 @@
+Error found in Live template
+	Advanced search is not using the right variable names in the get request
+	search= variable must also be used in order to override the empty dir
 Figure out why directories take so song to check for changes
 More compatibility testing with clients
 ------------- GENERAL TODO -------------
