--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,10 @@
+2009-07-05
+Fixed some size limiting problems in the db_code script
+Worked on WMP template
+	Added icons and formatting to album field
+Fixed some bugs in convert.php and file.php plugin
+	Full file paths can now be used to get a file, if it exists in database of course
+
 2009-07-02
 All relevant admin scripts now use templates the same way any other plugin does
 
