--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,14 +1,17 @@
+Create a packaging script that turns the site directory into a zip file without all the extra junk like EXT JS examples
+Re-upload entire site
 Fix HTML_ROOT usage to use generate_href instead (this is hard)
 Finish fixing up plugins to use new API
+	bt.php, admin section
+	Go through plugins and fix error reporting
+		users.php plugin
+		login.php plugin
+		modules reporting errors, plugins should stop processing database queries if there is invalid information in the request
+			no more 'File does not exist' in the modules
+			This should be handled by validate_() functions
+		Add feedback removed when the plugins were converted to new API
 Drupalish style coding
-	Plugins must register themselves just like the tools
-	Register directory structure so that only the top level plugin can be accessed for security
-	Register a name and description so they can be disabled in the admin panel
 	More streamlined way of plugins outputting data to template (assuming that $files is being used is no good)
-Request variables must also register themselves
-	The core requests will be defined in a core.php plugin
-	Must register a validate function or the variable is discarded completely
-	Plugins register request variables not modules
 Modules should be the only access to the database, no more custom code like ampache plugin
 	Using a callback might make it faster
 	Should be more streamlined to provide quicker access like ampache plugin
