git-svn-id: svn://localhost/Media%20Server@251 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,4 @@
+Fix line 597 in db_file.php module and in similar places that check if there are any errors
 Create a packaging script that turns the site directory into a zip file without all the extra junk like EXT JS examples
 Re-upload entire site
 Fix HTML_ROOT usage to use generate_href instead (this is hard)
