status: working on install.php admin plugin; temporarily created template for it
git-svn-id: svn://localhost/Media%20Server@265 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,8 @@
+2010-03-04
+Replaced some uses of $smarty.request and $smarty.get and $smarty.session
+Fixed $smarty.session.selected to use $selected and the way the select.php plugin uses it
+Added detection for Snoopy, EXT, bttracker JS to install.php plugin
+
 2010-03-02
 Deleted repository copy of extjs
 Went through $smarty.request usages and fixed them since all global variables are removed
