status: ampache.php working better
git-svn-id: svn://localhost/Media%20Server@268 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,9 @@
+2010-03-12
+Fixed encode.php plugin, time offset (%TO) wasn't being replaced since new API changed
+Added lots more actions to ampache.php plugin
+	Now supports albums, songs, search_songs, etc.
+Converted search.php plugin over to use new API
+
 2010-03-05
 Working on install.php
 Fine tuning API
