git-svn-id: svn://localhost/Media%20Server@270 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,4 +1,4 @@
-Finish ampache.php plugin to support videos, and playlists
+Finish ampache.php plugin to support genres, videos, and playlists
 Remove smarty from the entire system because it sucks
 Work on cron.php script
 Review all use of smarty variables
